tests/health/tests__lsp__bad_definition_test.toit.gold
tests/lsp/bad_definition_test.toit:46:3: error: Argument mismatch for 'fun'
Too few arguments provided
  fun
  ^~~
tests/lsp/bad_definition_test.toit:51:3: error: Argument mismatch for 'A'
Method does not take any arguments, but one was provided
  A 499
  ^
tests/lsp/bad_definition_test.toit:56:5: error: Argument mismatch for 'single'
Too few arguments provided
  A.single
    ^~~~~~
tests/lsp/bad_definition_test.toit:61:5: error: Argument mismatch for 'named'
Too few arguments provided
  A.named
    ^~~~~
tests/lsp/bad_definition_test.toit:66:5: error: Argument mismatch for 'foo'
Too few arguments provided
  A.foo
    ^~~
tests/lsp/bad_definition_test.toit:71:5: error: Argument mismatch for 'bar'
Too few arguments provided
  A.bar
    ^~~
tests/lsp/bad_definition_test.toit:76:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  A.fo
   ^
tests/lsp/bad_definition_test.toit:81:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  A.name
   ^
tests/lsp/bad_definition_test.toit:107:4: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
  C.foo
   ^
tests/lsp/bad_definition_test.toit:76:5: error: Class 'A' does not have any method 'fo'
  A.fo
    ^~
tests/lsp/bad_definition_test.toit:81:5: error: Class 'A' does not have any method 'name'
  A.name
    ^~~~
tests/lsp/bad_definition_test.toit:86:7: error: Class 'A' does not have any method 'fo'
  (A).fo
      ^~
tests/lsp/bad_definition_test.toit:91:7: error: Class 'A' does not have any method 'name'
  (A).name
      ^~~~
tests/lsp/bad_definition_test.toit:97:5: error: Argument mismatch for 'C.foo'
Too few arguments provided
  c.foo
    ^~~
tests/lsp/bad_definition_test.toit:102:7: error: Argument mismatch for 'C.foo'
Too few arguments provided
  (C).foo
      ^~~
tests/lsp/bad_definition_test.toit:107:5: error: Argument mismatch for 'C.foo'
Too few arguments provided
  C.foo
    ^~~
